# UPSentinel

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  indicator.py  install.sh  pyproject.toml  requirements.txt
docs/: autostart.md  configuration.md  development.md  installation.md  shutdown.md  troubleshooting.md  usage.md
resources/: 2026-04-25-deployment-and-icon-task.md  Tasks.txt
scripts/: i2c-detect.sh  install-user-service.sh
systemd/: ups-hat-b-indicator.service
tests/: test_backends.py  test_battery.py  test_config.py  test_hardware.py  test_icon_install.py  test_icons.py  test_thresholds.py
ups/: battery.py  config.py  hardware.py  icon_install.py  model.py
ups/backends/: __init__.py  appindicator.py  layershell.py  notification.py
