[project]
name = "ups-hat-b-indicator"
version = "1.0.0"
description = "Desktop tray indicator for Waveshare UPS HAT (B)"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "smbus2>=0.4",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
ups-indicator = "indicator:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
